# fastapi_boilerplate

./: LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 6090081049c8_created_user_table.py
app/core/: config.py
