[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A FastApi boilerplate with JWT login"
authors = [
    {name = "Luiz Antonio Lazoti",email = "luizlazoti@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "black[d] (>=25.1.0,<26.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
